# pherowar

./: .gitignore  README.md  build.sh  changelog  pherowar.sh  player-doc.md  run.sh
Application/: .dockerignore  Cargo.toml  Dockerfile.build  Dockerfile.player  build.sh  config.toml
Application/maps/: Cross.map  Labyrinth.map  Relic.map  Underground.map  spiral.map
Application/pherowar/: Cargo.toml
Application/pherowar/src/: app.rs  config.rs  main.rs  player.rs
Application/pherowar/src/editor/: color_palette.rs  editor_manager.rs  mod.rs  symmetry_mode.rs  tool_type.rs
Application/pherowar/src/editor/tools/: colony_tool.rs  food_tool.rs  helpers.rs  mod.rs  wall_tool.rs
Application/pherowar/src/engine/: camera.rs  mod.rs  rendering.rs
Application/pherowar/src/simulation/: ant.rs  colony.rs  map.rs  mod.rs  pheromone.rs  raycast.rs  sim.rs  timer.rs
Application/pherowar/src/ui/: events.rs  mod.rs  ui_manager.rs
Application/pherowar/src/ui/components/: ant_status_bar.rs  colony_options.rs  debug_panel.rs  dialog.rs  mod.rs  tool_size_slider.rs  top_panel.rs  visual_options.rs
Application/player_wrapper/: Cargo.toml
Application/player_wrapper/src/: main.rs
Application/shared/: Cargo.toml
Application/shared/src/: api.rs  lib.rs  util.rs
dummy-brain/: Makefile  brain.c  brain.h
